update for 이미지 용량 조절

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="2023.11.11 당신을 초대합니다. -종민,혜란">
+    <meta property="og:description" content="김종민·윤혜란의 모바일 청첩장입니다 :)">
+    <meta property="og:image" content="https://yoonena.github.io/wedding/common/image/wedding_1.jpg">
+    <meta property="og:url" content="https://yoonena.github.io/wedding/">
     <link type="text/css" rel="stylesheet" href="./common/css/reset.css" />
     <link type="text/css" rel="stylesheet" href="./common/css/maplestory_font.css" />
     <link type="text/css" rel="stylesheet" href="./common/css/style.css" />
     <link type="text/css" rel="stylesheet" href="./common/js/plug-in/aos.css" /><!-- AOS -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    
     <title>2023.11.11 김종민·윤혜란</title>
 </head>
 <body>
@@ -22,7 +28,7 @@
                         <img src="./common/image/main_date.png" alt="2023.11.11">
                     </div>
                     <div class="main_image">
-                        <img src="./common/image/wedding_1.png">
+                        <img src="./common/image/wedding_1.jpg">
                     </div>
                 </div>
             </div><!-- /main  -->
@@ -46,9 +52,9 @@
                         <div class="image-gallery-items">
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_1.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_1.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_1.png">
+                                            <img src="./common/image/wedding_1.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -56,9 +62,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_2.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_2.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_2.png">
+                                            <img src="./common/image/wedding_2.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -66,9 +72,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_3.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_3.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_3.png">
+                                            <img src="./common/image/wedding_3.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -76,9 +82,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_4.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_4.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_4.png">
+                                            <img src="./common/image/wedding_4.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -86,9 +92,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_5.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_5.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_5.png">
+                                            <img src="./common/image/wedding_5.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -96,9 +102,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_6.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_6.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_6.png">
+                                            <img src="./common/image/wedding_6.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -106,9 +112,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_7.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_7.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_7.png">
+                                            <img src="./common/image/wedding_7.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -116,9 +122,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_8.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_8.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_8.png">
+                                            <img src="./common/image/wedding_8.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -126,9 +132,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_9.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_9.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_9.png">
+                                            <img src="./common/image/wedding_9.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -136,9 +142,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_10.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_10.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_10.png">
+                                            <img src="./common/image/wedding_10.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -146,9 +152,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_11.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_11.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_11.png">
+                                            <img src="./common/image/wedding_11.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -156,9 +162,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_12.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_12.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_12.png">
+                                            <img src="./common/image/wedding_12.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -166,9 +172,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_13.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_13.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_13.png">
+                                            <img src="./common/image/wedding_13.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -176,9 +182,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_14.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_14.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_14.png">
+                                            <img src="./common/image/wedding_14.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -186,9 +192,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_15.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_15.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_15.png">
+                                            <img src="./common/image/wedding_15.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -196,9 +202,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_16.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_16.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_16.png">
+                                            <img src="./common/image/wedding_16.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -206,9 +212,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_17.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_17.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_17.png">
+                                            <img src="./common/image/wedding_17.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -216,9 +222,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_18.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_18.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_18.png">
+                                            <img src="./common/image/wedding_18.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -226,9 +232,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_19.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_19.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_19.png">
+                                            <img src="./common/image/wedding_19.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -236,9 +242,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_20.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_20.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_20.png">
+                                            <img src="./common/image/wedding_20.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -246,9 +252,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_21.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_21.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_21.png">
+                                            <img src="./common/image/wedding_21.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -256,9 +262,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_22.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_22.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_22.png">
+                                            <img src="./common/image/wedding_22.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -266,9 +272,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_23.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_23.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_23.png">
+                                            <img src="./common/image/wedding_23.jpg">
                                         </span>
                                     </a>
                                 </div>
@@ -276,9 +282,9 @@
 
                             <div class="gallery-item">
                                 <div>
-                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_24.png" class="thumbnail">
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_24.jpg" class="thumbnail">
                                         <span>
-                                            <img src="./common/image/wedding_24.png">
+                                            <img src="./common/image/wedding_24.jpg">
                                         </span>
                                     </a>
                                 </div>
