update for map pulse

--- a/index.html
+++ b/index.html
@@ -371,7 +371,10 @@
             <div class="contents contents_04" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>오시는 길</h6>
-                    <img class="map" src="./common/image/map.png">
+                    <div class="map">
+                        <img src="./common/image/map.png">
+                        <div class="pulsating-circle"></div>
+                    </div>
                     <div class="box_wrapper">
                         <div class="box">
                             <b>주소</b>
