update for 초대문구 추가

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                     <div class="where">
                         <p>2023년 11월 11일 토요일 오후 6시<br>더 아리엘 6층 스카이가든홀</p>
                     </div>
+                    <div class="invite">
+                        <p>
+                            행복한 결혼식의 초대장을 보내옵니다.<br>
+                            우리의 사랑을 나누고자 하는 이 날,<br>
+                            당신을 초대합니다.<br>
+                            따뜻한 축복과 함께해주시면 감사하겠습니다.
+                        </p>
+                    </div>
                 </div>
             </div><!-- /contents_01  -->
 
