update for more info

--- a/index.html
+++ b/index.html
@@ -44,16 +44,29 @@
                     </div>
                     <div class="invite">
                         <p>
-                            행복한 결혼식의 초대장을 보내옵니다.<br>
-                            우리의 사랑을 나누고자 하는 이 날,<br>
-                            당신을 초대합니다.<br>
-                            따뜻한 축복과 함께해주시면 감사하겠습니다.
+                            <span>행복한 결혼식의 초대장을 보내옵니다.</span><br>
+                            <span>우리의 사랑을 나누고자 하는 이 날,</span><br>
+                            <span>당신을 초대합니다.</span><br>
+                            <span>따뜻한 축복과 함께해주시면 감사하겠습니다.</span>
                         </p>
                     </div>
                 </div>
             </div><!-- /contents_01  -->
 
             <div class="contents contents_02" data-aos="fade-up" data-aos-delay="500">
+                <div class="inner">
+                    <div class="who_wrapper">
+                        <div class="who">
+                            <span><i>(故)</i>김광식</span>의 자녀 <b>김종민</b>
+                        </div>
+                        <div class="who">
+                            <span>윤준구·조명옥</span>의 자녀 <b>윤혜란</b>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /contents_02  -->
+            
+            <div class="contents contents_03" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>갤러리</h6>
                     <div class="image-gallery">
@@ -300,9 +313,9 @@
                         </div><!-- /image-gallery-items  -->
                     </div><!-- /image-gallery  -->
                 </div>
-            </div><!-- /contents_02  -->
+            </div><!-- /contents_03  -->
 
-            <div class="contents contents_03" data-aos="fade-up" data-aos-delay="500">
+            <div class="contents contents_04" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>
                         <img src="./common/image/subtext.png">
@@ -374,9 +387,9 @@
                         </table>
                     </div>
                 </div>
-            </div><!-- /contents_03  -->
+            </div><!-- /contents_04  -->
 
-            <div class="contents contents_04" data-aos="fade-up" data-aos-delay="500">
+            <div class="contents contents_05" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>오시는 길</h6>
                     <div class="map">
@@ -402,9 +415,9 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- /contents_04  -->
+            </div><!-- /contents_05  -->
 
-            <div class="contents contents_05" data-aos="fade-up" data-aos-delay="500">
+            <div class="contents contents_06" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>마음 전하실 곳</h6>
                     <div class="account_wrapper">
@@ -456,7 +469,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- /contents_05  -->
+            </div><!-- /contents_06  -->
 
 
             <div class="button_wrapper">
