update for 사진변경

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="wedding-card">
             <div class="main" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
-                    <div class="main_date">
-                        <img src="./common/image/main_date.png" alt="2023.11.11">
-                    </div>
                     <div class="main_image">
                         <img src="./common/image/wedding_1.jpg">
+                    </div>
+                    <div class="main_date">
+                        <img src="./common/image/main_date.png" alt="2023.11.11">
                     </div>
                 </div>
             </div><!-- /main  -->
@@ -306,6 +306,36 @@
                                     <a href="https://yoonena.github.io/wedding/common/image/wedding_24.jpg" class="thumbnail">
                                         <span>
                                             <img src="./common/image/wedding_24.jpg">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_25.jpg" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_25.jpg">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_26.jpg" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_26.jpg">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_27.jpg" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_27.jpg">
                                         </span>
                                     </a>
                                 </div>
