--- a/index.html
+++ b/index.html
@@ -592,6 +592,11 @@
                 $("#easterEggContainer").fadeIn();
                 $("#showEasterEgg").hide();
             });
+
+            $("#easterEggContainer").click(function() {
+                $("#showEasterEgg").fadeIn();
+                $("#easterEggContainer").hide();
+            });
         });
     </script>
 </body>
