update for 썸네일수정, 사진변경

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
 
-                            <div class="gallery-item">
+                            <!-- <div class="gallery-item">
                                 <div>
                                     <a href="https://yoonena.github.io/wedding/common/image/wedding_14.jpg" class="thumbnail">
                                         <span>
@@ -209,7 +209,7 @@
                                         </span>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="gallery-item">
                                 <div>
