update for swipe

--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
 
     <script type="text/javascript" src="./common/js/default.js"></script>
     <script type="text/javascript" src="./common/js/plug-in/aos.js"></script>
+    <script type="text/javascript" src="./common/js/plug-in/jquery.touchSwipe.min.js"></script>
     <script>
         AOS.init();
 
@@ -598,6 +599,33 @@
                 $("#easterEggContainer").hide();
             });
         });
+
+        (function() {
+        /* Define a variável que dá swipe no lightbox */
+        var magnificPopup = $.magnificPopup.instance;
+
+        /* Carrega a função quando clica no lightbox (senão não pega a classe utilizada) */
+        $(".open-popup-link").click(function(e) {
+
+            /* Espera carregar o lightbox */
+            setTimeout(function() {
+                /* Swipe para a esquerda - Próximo */
+                $(".mfp-container").swipe( {
+                swipeLeft:function(event, direction, distance, duration, fingerCount) {
+                    console.log("swipe right");
+                    magnificPopup.next();
+                },
+
+                /* Swipe para a direita - Anterior */
+                swipeRight:function(event, direction, distance, duration, fingerCount) {
+                console.log("swipe left");
+                magnificPopup.prev();
+                },
+                });
+            }, 500);
+        });
+
+        }).call(this);
     </script>
 </body>
 </html>
